# clang-diag

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.default.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  MakeFunction.cmake
src/lib/Common/: CMakeLists.txt  ClangDataTypes.cpp  ClangDiagnosticRecords.cpp  ErrorCategory.cpp  Logger.cpp  ParseResult.cpp  Serialize.cpp  helper.cpp
src/lib/Common/include/kfuzz/: Common.h  helper.h
src/lib/Common/include/kfuzz/Common/: ClangDataTypes.h  ClangDiagnosticRecords.h  ErrorCategory.h  FPSResult.h  IncompleteTypeDecls.h  Logger.h  ParseResult.h  Serialize.h  Serialize.inc
src/lib/Diag/: CMakeLists.txt  Serialize.cpp
src/lib/Diag/include/kfuzz/: Diag.h
src/lib/Diag/include/kfuzz/Diag/: ClangDiagnosticsFile.h  ClangDiagnosticsResult.h  Job.h  Serialize.h  Serialize.inc  SerializedDiagnosticsFileConverter.h
